--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -3,23 +3,23 @@
 - set_fact: "es_major_version={{ es_version.split('.')[0] }}.x"
   when:
       - es_major_version is undefined
-  tags:
-      - always
+  # tags:
+  #     - always
 
 - name: os-specific vars
   include_vars: "{{ansible_os_family}}.yml"
-  tags:
-      - always
+  # tags:
+  #     - always
 
 - name: set compatibility variables
   include: compatibility-variables.yml
-  tags:
-      - always
+  # tags:
+  #     - always
 
 - name: check-set-parameters
   include: elasticsearch-parameters.yml
-  tags:
-      - always
+  # tags:
+  #     - always
 
 - name: use snapshot release
   include: snapshot-release.yml
